--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-sass": "^3.4.2",
     "nodejs": "0.0.0",
     "qr-image": "^3.1.0",
+    "randomstring": "^1.1.4",
     "sqlite3": "^3.1.2"
   },
   "devDependencies": {
